[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sku-dupe-finder"
version = "0.1.0"
description = "Find cross-workbook SKU duplicates in Excel files"
authors = [{name="Your Name", email="you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas>=2.0.0", "openpyxl>=3.1.2", "xlsxwriter>=3.1.9"]

[project.optional-dependencies]
app = ["streamlit>=1.35.0"]

[project.scripts]
sku-dupe-finder = "sku_dupe_finder.cli:main"
